@@ -1,3 +1,4 @@
+- [2026-02-23 00:10] FEAT: 失败通知增加详细错误信息——包含失败阶段（文本生成/提示词生成/图片生成/图片下载/笔记上传）、错误类型、错误详情和账号信息 (Files: src/xhs_agent/services/goal_service.py)
 - [2026-02-23 00:00] FIX: 图片下载增加重试机制（最多3次），避免偶发网络超时导致整个任务失败；日志输出完整图片URL不再截断 (Files: src/xhs_agent/services/upload_service.py, src/xhs_agent/services/image_service.py, src/xhs_agent/services/goal_service.py)
 - [2026-02-22 23:45] REFACTOR: 数据库自动迁移——init_db启动时自动对比schema定义与实际表结构，缺失字段自动ALTER TABLE补充，无需手动维护迁移代码；以后新增字段只需修改_SCHEMA_SQL即可 (Files: src/xhs_agent/db.py)
 - [2026-02-22 23:30] REFACTOR: 海报提示词精简优化——poster模板去掉冗余风格描述词，去掉"无任何文字"改为鼓励输出中文标题文字，添加"无水印"，引导贴近参考图视觉形式；image_service海报前缀精简为"海报设计风格，无水印" (Files: src/xhs_agent/services/text_service.py, src/xhs_agent/services/image_service.py, src/xhs_agent/agent/prompt_agent.py)
